<resources>
    <string name="app_name">FHS Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="action_recycler_view">Refresh</string>
    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_youtube">Foothill Television</string>
    <string name="action_toggle">Toggle Side Panel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_item_first">Overview</string>
    <string name="drawer_item_second">Staff Directory</string>
    <string name="drawer_item_third">Aeries Portal</string>
    <string name="drawer_item_fourth">Campus Map</string>
    <string name="drawer_item_fifth">FHS Television</string>
    <string name="drawer_item_sixth">About</string>
    <string name="drawer_item_seventh">Settings</string>
    <string name="drawer_item_eighth">Privacy Policy</string>
    <string name="drawer_item_ninth">Ninth item</string>
    <string name="drawer_item_tenth">Tenth item</string>
    <string name="drawer_item_eleventh">Eleventh item</string>
    <string name="drawer_item_twelfth">Twelfth item</string>
    <string name="googlecards">Google cards</string>
    <string name="gridview">GridView</string>
    <string name="appearance">Appearance Animation</string>
    <string name="stickylistheaders">StickyListHeaders</string>
    <string name="limit">Limit to 2</string>
    <string name="itemmanipulation">Item Manipulation</string>
    <string name="gridviewexample">GridView</string>
    <string name="draganddrop">Drag and Drop</string>
    <string name="dynamiclistview">DynamicListView</string>
    <string name="animateaddition">Animate addition</string>
    <string name="expandablelistitemadapter">Expand list items</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="explainexpand">Tap on cards to expand or collapse them</string>
    <string name="expandorcollapsecard">This is card number %d</string>
    <string name="row_number">%s</string>
    <string name="header">%c</string>
    <string name="room_number">Room Number <b>%s</b></string>
    <string name="class_test"><b>Class#:</b>f8982 \n<b>Email:</b>testemail@gmail.com</string>
    <string name="message_no_connection">Please check your connection and try again.</string>
    <string name="no_connection_title">No Connection</string>
    <string name="button_try_again">TRY AGAIN</string>
    <string name="company_name_privacy">Privacy Policy</string>
    <string name="subtitle_privacy">CONTENT</string>
    <string name="privacy_text">Personal Data collected for the following purposes and using the following services:
Registration and authentication
Direct registration
Personal Data: email address and password
Full policy
Data Controller and Owner
Types of Data collected
Among the types of Personal Data that this Application collects, by itself or through third parties, there are: email address and password.
Other Personal Data collected may be described in other sections of this privacy policy or by dedicated explanation text contextually with the Data collection.
The Personal Data may be freely provided by the User, or collected automatically when using this Application.
Any use of Cookies - or of other tracking tools - by this Application or by the owners of third party services used by this Application, unless stated otherwise, serves to identify Users and remember their preferences, for the sole purpose of providing the service required by the User.
Failure to provide certain Personal Data may make it impossible for this Application to provide its services.
Users are responsible for any Personal Data of third parties obtained, published or shared through this Application and confirm that they have the third party\'s consent to provide the Data to the Owner.
Mode and place of processing the Data
Methods of processing
The Data Controller processes the Data of Users in a proper manner and shall take appropriate security measures to prevent unauthorized access, disclosure, modification, or unauthorized destruction of the Data.
The Data processing is carried out using computers and/or IT enabled tools, following organizational procedures and modes strictly related to the purposes indicated. In addition to the Data Controller, in some cases, the Data may be accessible to certain types of persons in charge, involved with the operation of the site (administration, sales, marketing, legal, system administration) or external parties (such as third party technical service providers, mail carriers, hosting providers, IT companies, communications agencies) appointed, if necessary, as Data Processors by the Owner. The updated list of these parties may be requested from the Data Controller at any time.
Place
The Data is processed at the Data Controller\'s operating offices and in any other places where the parties involved with the processing are located. For further information, please contact the Data Controller.
Retention time
The Data is kept for the time necessary to provide the service requested by the User, or stated by the purposes outlined in this document, and the User can always request that the Data Controller suspend or remove the data.
The use of the collected Data
The Data concerning the User is collected to allow the Owner to provide its services, as well as for the following purposes: Registration and authentication.
The Personal Data used for each purpose is outlined in the specific sections of this document.
Detailed information on the processing of Personal Data
Personal Data is collected for the following purposes and using the following services:
Registration and authentication
Additional information about Data collection and processing
Legal action
The User\s Personal Data may be used for legal purposes by the Data Controller, in Court or in the stages leading to possible legal action arising from improper use of this Application or the related services.
The User declares to be aware that the Data Controller may be required to reveal personal data upon request of public authorities.
Additional information about User\'s Personal Data
In addition to the information contained in this privacy policy, this Application may provide the User with additional and contextual information concerning particular services or the collection and processing of Personal Data upon request.
System logs and maintenance
For operation and maintenance purposes, this Application and any third party services may collect files that record interaction with this Application (System logs) or use for this purpose other Personal Data (such as IP Address).
Information not contained in this policy
More details concerning the collection or processing of Personal Data may be requested from the Data Controller at any time. Please see the contact information at the beginning of this document.
The rights of Users
Users have the right, at any time, to know whether their Personal Data has been stored and can consult the Data Controller to learn about their contents and origin, to verify their accuracy or to ask for them to be supplemented, cancelled, updated or corrected, or for their transformation into anonymous format or to block any data held in violation of the law, as well as to oppose their treatment for any and all legitimate reasons. Requests should be sent to the Data Controller at the contact information set out above.
This Application does not support \“Do Not Track\” requests.
To determine whether any of the third party services it uses honor the “Do Not Track” requests, please read their privacy policies.
Changes to this privacy policy
The Data Controller reserves the right to make changes to this privacy policy at any time by giving notice to its Users on this page. It is strongly recommended to check this page often, referring to the date of the last modification listed at the bottom. If a User objects to any of the changes to the Policy, the User must cease using this Application and can request that the Data Controller remove the Personal Data. Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about Users.
Information about this privacy policy
The Data Controller is responsible for this privacy policy, prepared starting from the modules provided by Iubenda and hosted on Iubenda\'s servers.</string>
</resources>