<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@drawable/about_us_background_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@color/progress_bar_color"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <TextView
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/privacy_company_name"
            android:paddingLeft="20dp"
            android:paddingTop="40dp"
            android:paddingRight="20dp"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/company_name_privacy"/>

        <View
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/about_us_land_image"
            android:scaleType="fitXY"/>

        <View
            android:background="#fff"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <TextView
            android:textSize="18sp"
            android:textColor="@color/action_bar_background"
            android:id="@+id/privacy_subtitle"
            android:paddingLeft="42dp"
            android:paddingTop="16dp"
            android:paddingRight="42dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle_privacy"/>

        <View
            android:background="@drawable/about_us_divider"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="18dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/about_us_text_background"
            android:paddingLeft="18dp"
            android:paddingTop="12dp"
            android:paddingRight="18dp"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="22dp">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/action_bar_background"
                android:id="@+id/privacy_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_text"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
